Tweaked location map page

--- a/app/views/pages/location.html.haml
+++ b/app/views/pages/location.html.haml
@@ -2,4 +2,4 @@
   .row.center
     .col-xs-12.page-header
       %h2 Location Map
-      =image_tag('map.jpg')
+      =image_tag('map.jpg', class: 'img-responsive')
