Resized video CTA

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -21,6 +21,10 @@ body {
       margin: 0 auto;
       float: none;
       padding: 25px 15px 40px 15px;
+      .btn-cta {
+        margin-top: 10px;
+      }
+
       .promovideo {
         vertical-align: middle;
       }
