New Schedule page up

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -117,6 +117,14 @@ body {
   }
 }
 
+.schedule {
+  .row {
+    .schedule-class {
+
+    }
+  }
+}
+
 @media(min-width:400px) {
   .descriptions {
     .col-xs-12 {
