Tweaked schedule page

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -14,33 +14,34 @@
                 %span.glyphicon.glyphicon-user
                 On-site
               %li.list-group-item Cloud 9 setup
-              %li.list-group-item Rails CLI Introduction
-              %li.list-group-item Rails Routing Introduction
-              %li.list-group-item Rails MVC introduction
-              %li.list-group-item Static pages
+              %li.list-group-item Rails command line helper
+              %li.list-group-item Rails routing
+              %li.list-group-item Rails Model/View/Vontroller
+              %li.list-group-item Static content with routes and views
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
               %li.list-group-item.active
                 %span.glyphicon.glyphicon-home
                 Remote
-              %li.list-group-item Static pages
-              %li.list-group-item Routes
-              %li.list-group-item Application design & specification
+              %li.list-group-item Creation of static content pages
+              %li.list-group-item Utilise routes, controllers, and views
+              %li.list-group-item Application design &amp; specification
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
               %li.list-group-item.active
                 %span.glyphicon.glyphicon-user
                 On-site 
-              %li.list-group-item User Stories on Trello
-              %li.list-group-item Generate User MVC
+              %li.list-group-item Add user stories on Trello
+              %li.list-group-item Generate User Model/View/Controller
               %li.list-group-item Model validation
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
               %li.list-group-item.active
                 %span.glyphicon.glyphicon-home
                 Remote
-              %li.list-group-item Spec and Generate Profile module
-              %li.list-group-item UT for Profile
+              %li.list-group-item Introduction to RSpec
+              %li.list-group-item Unit tests for user profile model
+              %li.list-group-item Add user profile model, view, and controller
         .row
           .col-xs-12
             %h4 Week 2 (5th October — 11th October 2014)
@@ -50,7 +51,7 @@
                 %span.glyphicon.glyphicon-user
                 On-site 
               %li.list-group-item Source Code Management with Git
-              %li.list-group-item Web App Deployment with Heroku
+              %li.list-group-item Web app deployment with Heroku
               %li.list-group-item Partials in Rails
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
@@ -74,9 +75,9 @@
                 %span.glyphicon.glyphicon-home
                 Remote
               %li.list-group-item Dynamic navigation
-              %li.list-group-item UT for sign in
-              %li.list-group-item UT for sign-up
-              %li.list-group-item UT for filters/scopes
+              %li.list-group-item Unit Testing for sign in
+              %li.list-group-item Unit Testing for sign-up
+              %li.list-group-item Unit Testing for filters/scopes
 
         .row
           .col-xs-12
@@ -130,7 +131,7 @@
                 %span.glyphicon.glyphicon-home
                 Remote
               %li.list-group-item Search Profiles (multi-table)
-              %li.list-group-item UT for DB associations
+              %li.list-group-item Unit Testing for DB associations
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
               %li.list-group-item.active
@@ -144,10 +145,11 @@
               %li.list-group-item.active
                 %span.glyphicon.glyphicon-home
                 Remote
-              %li.list-group-item UT for API/external services
-              %li.list-group-item UT for more complex validations
-              %li.list-group-item UT for roles
-              %li.list-group-item Implementation of Roles to separate users / AC
+              %li.list-group-item Unit Testing for API/external services
+              %li.list-group-item Unit Testing for more complex validations
+              %li.list-group-item Unit Testing for roles
+              %li.list-group-item Implementation of Roles to separate users types
+              %li.list-group-item Access Control
 
         .row
           .col-xs-12
@@ -160,7 +162,7 @@
               %li.list-group-item Geolocation
               %li.list-group-item Google Maps (embed)
               %li.list-group-item Google Maps (Reverse geo-coding)
-              %li.list-group-item Latitude/Longitude handling (DB)
+              %li.list-group-item Latitude/Longitude handling
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
               %li.list-group-item.active
