--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -22,3 +22,6 @@
         %li= link_to 'About Us', root_path + '#footer'
         %li= link_to 'Schedule', '/schedule'
         %li= link_to 'Contact Us', contact_form_path(form_page: :general)
+        %li
+          %p.navbar-btn
+            =link_to 'Sign Up Now!', 'https://docs.google.com/forms/d/1pXvc8U4UJXiE4PCAJhqLiJdK9rX3WTR-Sm0a54tLtSY/viewform', class: "btn btn-success btn-sm"
