change colour of calendar list-group header. added Night slots and Sunday Slots

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -38,8 +38,8 @@
 
             .schedule-class.col-xs-6.col-lg-2.col-sm-4.col-md-2
               %ul.list-group
-                %li.list-group-item.active
-                  %span.glyphicon.glyphicon-user
+                %li.list-group-item.list-group-item-success
+                  %span.glyphicon.glyphicon-calendar
                   = day
                 %li.list-group-item
                   %sup
@@ -51,6 +51,26 @@
                     2.00 pm - 6.00 pm
                   %br
                   Afternoon
+                %li.list-group-item
+                  %sup
+                    8.00 pm - 12.00 am
+                  %br
+                  Night
+          .schedule-class.col-xs-6.col-lg-2.col-sm-4.col-md-2
+            %ul.list-group
+              %li.list-group-item.list-group-item-success
+                %span.glyphicon.glyphicon-calendar
+                Sunday
+              %li.list-group-item
+                %sup
+                  9.00 am - 1.00 pm
+                %br
+                Morning
+              %li.list-group-item 
+                %sup
+                  2.00 pm - 6.00 pm
+                %br
+                Afternoon               
 
    
  
