Corrected spelling error on schedule page.

--- a/app/views/pages/schedule.html.haml
+++ b/app/views/pages/schedule.html.haml
@@ -102,7 +102,7 @@
               %li.list-group-item Cloud 9 setup
               %li.list-group-item Rails command line helper
               %li.list-group-item Rails routing
-              %li.list-group-item Rails Model/View/Vontroller
+              %li.list-group-item Rails Model/View/Controller
               %li.list-group-item Static content with routes and views
           .schedule-class.col-xs-12.col-lg-3.col-sm-10.col-md-8
             %ul.list-group
